# hangeul_jamo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/hangeul_jamo/: __init__.py
