[project]
name = "hangeul-jamo"
version = "1.0.0"
description = "Korean Hangul syllable and jamo manipulation library (meta-package)"
readme = "README.md"
authors = [{ name = "hangeul-jamo contributors" }]
requires-python = ">=3.13"
dependencies = [
    "hangeul-jamo-py @ git+https://github.com/gembleman/hangeul_jamo_py.git",
]
keywords = ["korean", "hangul", "jamo", "nlp", "korean-language"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[project.optional-dependencies]
rust = ["hangeul-jamo-rs"]

[project.urls]
Repository = "https://github.com/gembleman/hangeul_jamo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
